<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/systemNotificatioin" />

    <Button
        android:id="@+id/btWorkUI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sysytemUI" />

    <Button
        android:id="@+id/btWorkUIDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/systemUIDelay" />

    <Button
        android:id="@+id/btWorkBG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/systemBackground" />

</LinearLayout>